client/src/style/sass/common/_filter-list.scss
.filter-list {
  margin: 0;
  padding: 10px 0 0;
  list-style: none;
  background: #fff;

  &__item {
    display: block;
    height: auto;

    h6.title {
      color: #BC3364;
      font: 400 13px/20px 'Poppins';
    }

    &:not(:last-child) {
      margin-bottom: 10px;
    }
  }
}

.sort-options {
  margin-left: 10px;
}

.card {
  &_type {
    &_filter {
      padding: 0 20px;

      &.card_expanded {
        .card__title,
        .card__action-sort,
        .card__action-search {
          display: none;
        }

        .card__search-box {
          visibility: visible;
          display: block;
        }
      }

      &.attr-visibility.truncate {
        padding: 0;
        margin-left: -5px;
        display: flex;
        align-items: center;
      }

      .card__header {
        display: flex;
        align-items: center;
        padding: 0;

        + .card__body {
          margin-top: 4px;
          padding: 0;
        }
      }

      .card__title {
        margin: 0;
        color: #BC3364;
        font: 500 15px/24px 'Poppins';
        max-width: 100%;
        overflow: hidden;
        text-overflow: ellipsis;
      }

      .card__action-sort {
        order: -1;
      }

      .card__action-search {
        margin-left: auto;

        button {
          width: 24px;
          height: 24px;
          background: url('/img/filter-panel/search.svg') 50% no-repeat;
          background-size: 16px;
          font-size: 0;
          padding: 0;
          opacity: .6;
          transition: opacity .2s;

          &:hover {
            opacity: 1;
          }
        }
      }

      .card__action-sort {
        cursor: pointer;
        width: 16px;
        height: 16px;
        font-size: 0;
        background: url('/img/filter-panel/sort.svg') 50% no-repeat;
        background-size: 16px;
        margin-right: 9px;
        padding: 0;
        opacity: .8;
        transition: opacity .2s;

        &:hover {
          opacity: 1;
        }

        &.up {
          background-image: url('/img/filter-panel/sort-up.svg');
        }

        &.disabled {
          opacity: .5;
        }

        &-alphabet {
          background: url('/img/filter-panel/alphabet-sort-asc.png') 50% no-repeat;

          &.desc {
            background-image: url('/img/filter-panel/alphabet-sort-desc.png')
          }
        }
      }

      .card__search-box {
        position: relative;
        background: #fff;
        visibility: hidden;
        display: none;
        flex-grow: 1;

        &::before {
          position: absolute;
          content: '';
          width: 16px;
          height: 16px;

          top: 50%;
          transform: translateY(-50%);
          left: 12px;
          opacity: .6;
        }

        input {
          width: 100%;
          border: 2px solid #EBEFF2;
          transition: background-color .2s;
          padding: 7px 30px 8px 40px;
          font: 400 15px/1 'Poppins';
          border-radius: 4px;
          background: #fff url('/img/filter-panel/search.svg') 12px 50% no-repeat;

          &:hover {
            border-color: darken(#EBEFF2, 10%);
          }

          &:focus {
            border-color: rgba(#BA3665, .5);
            background-image: url('/img/filter-panel/search-purple.svg');
            color: #000;
          }
        }

        .close {
          width: 24px;
          height: 24px;
          position: absolute;
          top: 50%;
          padding: 0;
          font-size: 0;
          transform: translateY(-50%);
          background: url('/img/play-toolbar/cancel.svg') 50% no-repeat;
          background-size: 10px;
          right: 5px;
          opacity: .4;
        }
      }

      .card__body {
        padding: 20px 0 0;
      }

      .card__footer {
        margin-top: 8px;
      }

      .card-pagination {
        font-size: 12px;
        line-height: 16px;
        display: flex;
        align-items: center;
        justify-content: center;
        background: #F5F6F8;
        border-radius: 4px;
        padding: 8px;

        &__button {
          color: #C02D62;
          cursor: pointer;

          &:first-child {
            margin-right: .5em;
          }

          &:last-child {
            margin-left: .5em;
          }

          &:hover {
            color: darken(#C02D62, 10%);
          }

          &.disabled {
            pointer-events: none;
            color: #C2CFE1;
          }
        }

        &__total {
          color: #6A707E;
          padding: 0 10px;
        }

      }
    }
  }
}

